--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,10 @@
     --input: 217.2 32.6% 17.5%;
     --ring: 224.3 76.3% 48%;
   }
+
+  html {
+    font-family: 'Noto Sans JP', sans-serif;
+  }
 }
 
 @layer base {
